[package]
name = "cmdsetu-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mirai_j4rs = { git = "https://github.com/worksoup/mirai_j4rs.git" }
lazy_static = "1.4"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.35", features = ["full"] }
serde = "1.0"
serde_json = "1.0"
toml = "0.8"
ctrlc = "3.4"
regex = "1.10"
chinese-number = "0.7"
rand = "0.8"
utf8_slice = "1.0"
thread_local = "1.1"
trauma = "2.2"
tokio-stream = "*"
futures = "0.3"
url = "2.5"
strfmt = "*"
